Make white chess Prototype

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="js/prefixfree.min.js"></script>
   </head>
   <body>
-    <div id="app" class="loading" data-theme="classic" data-frame="off" data-menu="main">
+    <div id="app" class="loading" data-theme="marble" data-frame="off" data-menu="main">
       <div id="logo">
         <div class="symbol"><div></div><div></div><div></div><div></div><div></div><div></div></div>
         <div class="symbol"><div></div><div></div><div></div><div></div><div></div><div></div></div>
@@ -332,6 +332,7 @@
         <div id="promotion"></div>
       </div>
     </div>
-    <script src="js/scripts.min.js"></script>
+    <script src="js/libraries.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
